--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://15.207.110.57:9000/</sonar.host.url>
 		<sonar.login>squ_8c7515efa57fe9435ca12d78689229310a26df8f</sonar.login>
-		<sonar.password>passw0rd</sonar.password> 
+		<sonar.password>konga</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
