--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.127.9.145:9000//</sonar.host.url>
+		<sonar.login>admin</sonar.login>
 		<sonar.login>squ_855b8b805f27f36d99cb66ab5cec3e5fa60dde49</sonar.login>
 		<sonar.password>password</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
